--- a/style.css
+++ b/style.css
@@ -145,6 +145,15 @@ body {
   color: var(--clr-primary-400);
 }
 
+p:not([class]) {
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"] {
+  max-width: 42ch;
+}
+
 /* button */
 .button {
   display: inline-flex;
@@ -288,6 +297,11 @@ body {
   width: min(var(--max-width), 100% - var(--padding) * 2);
   /* my */
   margin-inline: auto;
+}
+
+/* .flow * + * */
+:where(.flow > :not(:first-child)) {
+  margin-top: var(--flow-spacer, 3em);
 }
 
 .even-columns {
