--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
   --clr-primary-400: hsl(228, 39%, 23%);
 
   --clr-neutral-900: hsl(233, 12%, 13%);
-  --clr-neutral-100: hsl(0, 0%, 98%);
+  --clr-neutral-200: hsl(0, 0%, 97%);
+  --clr-neutral-100: hsl(0, 0%, 99%);
 
   --ff-primary: "Be Vietnam Pro", sans-serif;
 
@@ -151,7 +152,7 @@ p:not([class]) {
 }
 
 p[data-width="wide"] {
-  max-width: 42ch;
+  max-width: 43ch;
 }
 
 /* button */
@@ -475,6 +476,101 @@ input:where([type="text"], [type="email"]) {
     grid-column: 2 / -1;
   }
 }
+
+/* slider */
+
+.slider {
+  display: flex;
+  list-style: none;
+  gap: var(--size-600);
+}
+
+.a11y-slider-container {
+  margin-block: var(--size-700);
+  margin-inline: var(--size-400);
+}
+
+.slider > * {
+  position: relative;
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+@media (min-width: 30em) {
+  .slider {
+    scroll-padding-inline: 25px;
+  }
+
+  .a11y-slider-container {
+    margin-inline: 0;
+  }
+
+  .slider > * {
+    width: 50%;
+  }
+}
+@media (min-width: 50em) {
+  .slider > * {
+    width: 35%;
+  }
+}
+
+.slider-content {
+  padding: var(--size-700) var(--size-600) var(--size-600);
+  background: var(--clr-neutral-200);
+  border-radius: var(--size-100);
+}
+
+.slider img {
+  width: var(--size-800);
+  position: relative;
+  inset: 0;
+  margin-inline: auto;
+  top: 0;
+  transform: translateY(50%);
+}
+
+.a11y-slider-dots {
+  display: flex;
+  margin-block: var(--size-500);
+  justify-content: center;
+  gap: var(--size-300);
+}
+
+.a11y-slider-dots li {
+  display: block;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+}
+
+.a11y-slider-dots li button {
+  display: block;
+  font-size: 0;
+  text-indent: -9999px;
+  background: transparent;
+  border: 1px solid var(--clr-accent-400) !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.a11y-slider-dots li button.active {
+  background: var(--clr-accent-400);
+}
+
+/* .a11y-slider-prev {
+  text-indent: -9999px;
+  position: relative;
+}
+.a11y-slider-prev::after {
+  content: "test";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100px;
+  height: 100px;
+} */
 
 /* Utility classes */
 
