--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ ol[role="list"] {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 /* Set core body defaults */
@@ -577,7 +578,7 @@ input:where([type="text"], [type="email"]) {
   height: 100px;
 } */
 
-/* image with blob bg */
+/* hero */
 
 @media (max-width: 47em) {
   .hero__image {
@@ -603,6 +604,31 @@ input:where([type="text"], [type="email"]) {
 @media (min-width: 47em) {
   .hero__image::before {
     width: 45%;
+  }
+}
+
+/* sales points */
+
+.sales-points__blob {
+  position: relative;
+}
+
+.sales-points__blob::before {
+  content: url("images/bg-tablet-pattern.svg");
+  zoom: 40%;
+  position: absolute;
+  z-index: -1;
+  left: 70%;
+  bottom: 120%;
+  width: 100px;
+}
+
+@media (min-width: 47em) {
+  .sales-points__blob::before {
+    zoom: 70%;
+    left: -500px;
+    top: 42%;
+    width: 100px;
   }
 }
 
