--- a/style.css
+++ b/style.css
@@ -292,64 +292,39 @@ p[data-width="wide"] {
   --logo-color: var(--clr-neutral-100);
 }
 
-.primary-footer-wrapper {
+.primary-footer__wrapper {
   display: grid;
   gap: var(--size-700);
   grid-template-areas:
     "form"
     "nav"
-    "logo-social";
+    "social"
+    "logo"
+    "copyright";
+  justify-content: center;
+  align-items: start;
 }
 
-.primary-footer-logo-social {
-  grid-area: logo-social;
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  gap: var(--size-700);
+.primary-footer__logo {
+  grid-area: logo;
 }
-.primary-footer-nav {
-  grid-area: nav;
-}
-.primary-footer-form {
+
+.primary-footer__form {
   grid-area: form;
 
-  display: grid;
-  align-content: space-between;
-}
-
-.primary-footer form {
   display: flex;
-  gap: var(--size-400);
+  gap: var(--size-200);
 }
 
-input:where([type="text"], [type="email"]) {
-  border-radius: 100vw;
-  border: 0;
-  padding: var(--size-300) var(--size-200);
-}
-
-@media (min-width: 47em) {
-  .primary-footer-wrapper {
-    grid-template-areas: "logo-social nav form";
-  }
-
-  .primary-footer-logo-social {
-    align-items: start;
-    justify-content: space-between;
-  }
-}
-
-@media (max-width: 47em) {
-  .primary-footer-wrapper > * {
-    margin-inline: auto;
-  }
+.primary-footer__nav-wrapper {
+  grid-area: nav;
+  margin-inline: auto;
 }
 
 /* footer navigation */
 .footer-nav {
   columns: 2;
-  gap: clamp(var(--size-200), 20vw, var(--size-900));
+  gap: clamp(4rem, 20vw, 7rem);
 }
 
 .footer-nav a {
@@ -361,6 +336,37 @@ input:where([type="text"], [type="email"]) {
   color: var(--clr-accent-400);
 }
 
+.primary-footer__copyright {
+  grid-area: copyright;
+  text-align: center;
+  opacity: 0.7;
+}
+
+input:where([type="text"], [type="email"]) {
+  border-radius: 100vw;
+  border: 0;
+  padding: var(--size-300) var(--size-500);
+  width: max(100%, 14rem);
+}
+
+@media (min-width: 47em) {
+  .primary-footer__wrapper {
+    grid-template-areas:
+      "logo nav form"
+      "social nav copyright";
+    grid-template-columns: min-content 1fr auto;
+  }
+
+  .primary-footer__copyright {
+    text-align: right;
+  }
+}
+
+@media (max-width: 47em) {
+  .primary-footer__wrapper > * {
+    margin-inline: auto;
+  }
+}
 /* social list */
 .social-list {
   display: flex;
@@ -380,11 +386,12 @@ input:where([type="text"], [type="email"]) {
 @media (min-width: 47em) {
   .social-list {
     display: flex;
-    gap: var(--size-400);
+    gap: var(--size-300);
   }
 
   .social-icon {
     width: var(--size-500);
+    max-width: revert;
   }
 }
 
@@ -778,6 +785,9 @@ input:where([type="text"], [type="email"]) {
 
 .margin-bottom-700 {
   margin-block-end: var(--size-700);
+}
+.margin-top-900 {
+  margin-block-start: var(--size-900);
 }
 
 .mx-auto {
